--- a/index.html
+++ b/index.html
@@ -9,17 +9,30 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header">
+        <div class="content-wrapper">
+            <header class="header">
+                <h1 class="header-title">To Do List</h1>
+                <h5 class="header-date"></h5>
+            </header>
 
-        </header>
-
-        <main class="main"> 
-
-        </main>
-
-        <footer class="footer">
-
-        </footer>
+            <main class="main"> 
+                <article class="task-add">
+                    <div class="task-add-content">
+                        <input type="text" class="task-add-input">
+                        <button class="task-add-btn">Add</button>
+                        <button class="task-undo-btn">Undo</button>
+                    </div>
+                </article>
+                <section class="task-container">
+                    <article class="task-item">
+                        <div class="task-remove-btn">X</div>
+                        <p class="task-content">
+                        </p>
+                    </article>
+                </section>
+            </main>
+        </div>
     </div>
+    <script src="src/js/main.js"></script>
 </body>
 </html>
