add design and a little bit of animation

--- a/index.html
+++ b/index.html
@@ -18,17 +18,15 @@
             <main class="main"> 
                 <article class="task-add">
                     <div class="task-add-content">
-                        <input type="text" class="task-add-input">
-                        <button class="task-add-btn">Add</button>
-                        <button class="task-undo-btn">Undo</button>
+                        <textarea class="task-add-input" placeholder="Add note..."></textarea>
+                        <div class="task-btns">
+                            <button class="task-add-btn">Add</button>
+                            <button class="task-undo-btn">Undo</button>
+                        </div>
                     </div>
                 </article>
+                <hr class="task-line">
                 <section class="task-container">
-                    <article class="task-item">
-                        <div class="task-remove-btn">X</div>
-                        <p class="task-content">
-                        </p>
-                    </article>
                 </section>
             </main>
         </div>
